tests/ui/issues/issue-22872.stderr
error[E0277]: the trait `Wrap<'_>` is not implemented for `Wrapper<P>`
  --> $DIR/issue-22872.rs:20:40
   |
LL |     let _: Box<dyn for<'b> Wrap<'b>> = Box::new(Wrapper(process));
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Wrap<'_>` is not implemented for `Wrapper<P>`, which is required by `for<'b> Wrapper<P>: Wrap<'b>`
   |
note: required for `Wrapper<P>` to implement `for<'b> Wrap<'b>`
  --> $DIR/issue-22872.rs:7:13
   |
LL | impl<'b, P> Wrap<'b> for Wrapper<P>
   |             ^^^^^^^^     ^^^^^^^^^^
LL | where P: Process<'b>,
LL |       <P as Process<'b>>::Item: Iterator {
   |                                 -------- unsatisfied trait bound introduced here
   = note: required for the cast from `Box<Wrapper<P>>` to `Box<dyn for<'b> Wrap<'b>>`
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn push_process<P>(process: P) where P: Process<'static>, for<'b> Wrapper<P>: Wrap<'b> {
   |                                                         ++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
